# Openhands-and-SWEbench

./: .gitignore  .gitignore.swp  k8s_runtime_plan.md  pyproject.toml  setup-httpbin-caddy.sh  stop-httpbin-caddy.sh
OpenHands/evaluation/benchmarks/swe_bench/: run_infer.py
OpenHands/evaluation/benchmarks/swe_bench/scripts/: run_infer.sh
OpenHands/evaluation/utils/: shared.py
OpenHands/examples/: run_GLM45.sh  run_GLM46_1.sh  run_GLM46_2.sh  run_GLM46_3.sh  run_GLM46_test.sh  run_claude.sh  run_qwen.sh
OpenHands/openhands/agenthub/codeact_agent/tools/: browser.py
OpenHands/openhands/app_server/sandbox/: process_sandbox_service.py
OpenHands/openhands/core/config/: arg_utils.py  openhands_config.py  sandbox_config.py
OpenHands/openhands/runtime/: file_viewer_server.py
OpenHands/openhands/runtime/builder/: docker.py
OpenHands/openhands/runtime/impl/docker/: docker_runtime.py
OpenHands/openhands/runtime/impl/remote/: remote_runtime.py
OpenHands/openhands/runtime/utils/: runtime_build.py
OpenHands/openhands/runtime/utils/runtime_templates/: Dockerfile.j2
OpenHands/openhands/storage/: README.md
OpenHands/openhands/utils/: paths.py
SWE-bench/: batch_swebench_eval.sh  pred_paths.txt
SWE-bench/swebench/harness/: grading.py  run_evaluation.py
SWE-bench/swebench/harness/constants/: python.py
SWE-bench/swebench/harness/log_parsers/: python.py
SWE-bench/swebench/harness/test_spec/: python.py  test_spec.py
